tests/NormalTests/paczka2/big_fuzzy/24209499.err
Error in line 3: S968 S968 61,3
Error in line 11: 1YKjoSd S989 43,7
Error in line 16: rKJp2 A896 7,2
Error in line 30: S968 S989 32,8
Error in line 43: S968 S989 10,9
Error in line 51: fus6F1K S989 5,9
Error in line 59: S968 S968 06,3
Error in line 50: w5P1 S968 35,5
Error in line 60: 1YKjoSd S467 65,7
Error in line 69: YGDv1zjaC9H S989 12,2
Error in line 77: w5P1 S968 31,6
Error in line 48: S968 S968 2,7
Error in line 81: YGDv1zjaC9H S968 78,5
Error in line 90: SU68 SU8U 53,7
Error in line 89: fus6F1K S467 69,8
Error in line 102: S968 S989 55,9
Error in line 110: fus6F1K S467 32,0
Error in line 114: fus6F1K S968 76,0
Error in line 120: w5P1 S989 40,0
Error in line 124: w5P1 A896 0,4
Error in line 135: w5P1 A893 0,4
Error in line 151: 1YKjoSd S989 98,2
Error in line 155: fus6F1K S989 232,4
Error in line 183: 1YKjoSd S989 60,86
Error in line 176: YGDv1zjaC9H A896 34,8
Error in line 163: S968 S989 94,8
Error in line 182: fus6F1K S968 78,0
Error in line 199: 1YKjoSd S989 78,1
Error in line 206: fus6F1K S989 93,8
Error in line 218: YGDv1zjaC9H A896 87,3
Error in line 221: YGDv1zjaC9H S989 82,1
Error in line 225: 1YKjoSd S467 0,9
Error in line 238: fus6F1K S989 23,7
Error in line 242: 1YKjoSd S467 80,3
